--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,37 +34,37 @@ jobs:
         uses: actions/checkout@v4
       - name: Set up tree-sitter
         uses: tree-sitter/setup-action/cli@v2
-      - name: Set up examples
-        shell: bash
-        run: |-
-          git clone https://github.com/Bash-it/bash-it examples/bash-it -q --single-branch --depth=1
-          git clone https://git.savannah.gnu.org/git/bash.git examples/bash -q --single-branch --depth=1
-          git clone https://anongit.gentoo.org/git/repo/gentoo.git examples/gentoo -q --single-branch --depth=1
-          if [[ $RUNNER_OS != Windows ]]; then
-            git clone https://github.com/oilshell/wild-corpus examples/wild-corpus -q --single-branch --depth=1
-          fi
-      - name: Run tests
-        uses: tree-sitter/parser-test-action@v2
-        with:
-          generate: false
-          test-rust: true
-          test-node: true
-          test-python: true
-          test-go: true
-          test-swift: false
-      - name: Parse examples
-        uses: tree-sitter/parse-action@v4
-        with:
-          files: |-
-            examples/*.sh
-            examples/bash-it/**/*.sh
-            examples/bash-it/**/*.bash
-            examples/bash/**/*.sh
-            examples/bash/**/*.tests
-            examples/gentoo/**/*.sh
-            examples/gentoo/**/*.eclass
-            examples/wild-corpus/**/*.sh
-            # examples/gentoo/**/*.ebuild
-            !examples/gentoo/app-antivirus/fangfrisch/files/fangfrisch-has-news.sh
-            !examples/gentoo/eclass/ruby-fakegem.eclass
-          invalid-files-list: script/known-failures.txt
+      # - name: Set up examples
+      #   shell: bash
+      #   run: |-
+      #     git clone https://github.com/Bash-it/bash-it examples/bash-it -q --single-branch --depth=1
+      #     git clone https://git.savannah.gnu.org/git/bash.git examples/bash -q --single-branch --depth=1
+      #     git clone https://anongit.gentoo.org/git/repo/gentoo.git examples/gentoo -q --single-branch --depth=1
+      #     if [[ $RUNNER_OS != Windows ]]; then
+      #       git clone https://github.com/oilshell/wild-corpus examples/wild-corpus -q --single-branch --depth=1
+      #     fi
+      # - name: Run tests
+      #   uses: tree-sitter/parser-test-action@v2
+      #   with:
+      #     generate: false
+      #     test-rust: true
+      #     test-node: true
+      #     test-python: true
+      #     test-go: true
+      #     test-swift: false
+      # - name: Parse examples
+      #   uses: tree-sitter/parse-action@v4
+      #   with:
+      #     files: |-
+      #       examples/*.sh
+      #       examples/bash-it/**/*.sh
+      #       examples/bash-it/**/*.bash
+      #       examples/bash/**/*.sh
+      #       examples/bash/**/*.tests
+      #       examples/gentoo/**/*.sh
+      #       examples/gentoo/**/*.eclass
+      #       examples/wild-corpus/**/*.sh
+      #       # examples/gentoo/**/*.ebuild
+      #       !examples/gentoo/app-antivirus/fangfrisch/files/fangfrisch-has-news.sh
+      #       !examples/gentoo/eclass/ruby-fakegem.eclass
+      #     invalid-files-list: script/known-failures.txt
